First HTML lines of code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     </head>
     <body>
-        
+        <h1> Vijay's Movie Quiz</h1>
+        <i class="ri-play-circle-line"></i>
+        <h2> Are you ready to Play? </h2>
+
     </body>
 </html>
