First html lines

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <h1> Vijay's Movie Quiz</h1>
-        <i class="ri-play-circle-line"></i>
-        <h2> Are you ready to Play? </h2>
-
+        <div>
+            <i class="ri-play-circle-line"></i>
+            <h2> Are you ready to Play? </h2>
+        </div>
     </body>
 </html>
