Adding the home button

--- a/game.html
+++ b/game.html
@@ -8,10 +8,6 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     </head>
     <body>
-        <h1> Vijay's Movie Quiz</h1>
-        <div>
-        <a href="/game.html"    <i class="ri-play-circle-line"></i>
-            <h2> Are you ready to Play? </h2>
-        </div>
+        <a href="/index.html"></a><i class="ri-home-heart-fill"></i>
     </body>
 </html>
