--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1> Vijay's Movie Quiz</h1>
         <div>
-        <a href="/game.html"    <i class="ri-play-circle-line"></i>
+        <a href="/game.html"><i class="ri-play-circle-line"></i></a>
             <h2> Are you ready to Play? </h2>
         </div>
     </body>
