Changing h1,h2 font and colors

--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
 
         <!--Add your CSS rules here-->
         <style>
-            
+            h1 {
+                font-family: 'Montserrat', sans-serif;
+                color: blue;
+            }
+            h2 {
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                color:crimson
+            }
         </style>
     </head>
     <body>
-        <h1>Hollywood Quiz</h1>
-        <a href="game.html"><i class="ri-play-circle-fill"></i></a>
-        <h2>PLAY</h2>
+        <h1>Testing Vijay's Quiz</h1>
+        <a href="game.html"><i class="ri-play-mini-fill"></i>
+        </a>
+        <h2>Let's Play</h2>
     </body>
 </html>
