--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         <h1>Testing Vijay's Quiz</h1>
         <a href="game.html"><i class="ri-play-mini-fill"></i>
         </a>
-        <h2>Let's Play</h2>
+        <h2>C'mon! Let's Play</h2>
     </body>
 </html>
