--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!--Add your CSS rules here-->
         <style>
             h1 {
-                font-family: 'Montserrat', sans-serif;
-                color: blue;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                color: blue
             }
             h2 {
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
