--- a/index.html
+++ b/index.html
@@ -14,19 +14,35 @@
 
         <!--Add your CSS rules here-->
         <style>
-            h1 {
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-                color: blue
+            html, body {
+                height: 100%;
             }
-            h2 {
+            
+            body {
+                color: crimson;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                color:crimson
+                font-size: larger;
+                text-align: center;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+
+            }
+
+            a {
+                color:blue
+                text-decoration: none;
+            }
+
+            a:hover {
+                color: greenyellow
             }
         </style>
     </head>
     <body>
         <h1>Testing Vijay's Quiz</h1>
-        <a href="game.html"><i class="ri-play-mini-fill"></i>
+        <a href="game.html"><i class="ri-play-mini-fill ri-3x"></i>   
         </a>
         <h2>C'mon! Let's Play</h2>
     </body>
