--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
             
             body {
-                color: crimson;
+                color: white;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 font-size: larger;
                 text-align: center;
@@ -28,10 +28,12 @@
                 flex-direction: column;
                 justify-content: space-between;
 
+                background: url(https://images.unsplash.com/photo-1616530940355-351fabd9524b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fG1vdmllfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60);
+
             }
 
             a {
-                color:blue
+                color:aqua
                 text-decoration: none;
             }
 
